name:                ascii-art
version:             0.1.0.0
synopsis:            Make ASCII art from image files.
homepage:            http://github.com/Rufflewind/ascii-art
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable ascii-art
  ghc-options:         -O2 -Wall
  main-is:             Main.hs
                       -- this is probably more restrictive than necessary
  build-depends:       base         >=4.6 && <4.7
                     , JuicyPixels  >=3.1 && <3.2
